Status update: 29/07/25 1. Worked on updating the changes - 3hrs 2. Worked on service class that related to order -2hrs 3. Worked on testing all end points - 3hrs
Tomorrows plan:
1. To add security.
2. To create Document