@@ -10,6 +10,7 @@ import com.ECommerceApp.Model.Delivery.DeliveryPerson;
 import com.ECommerceApp.Model.Delivery.ShippingDetails;
 import com.ECommerceApp.Model.Order.Order;
 import com.ECommerceApp.Model.Order.OrderItem;
+import com.ECommerceApp.Model.Payment.Payment;
 import com.ECommerceApp.Model.Product.Product;
 import com.ECommerceApp.Model.RefundAndExchange.Refund;
 import com.ECommerceApp.Repository.RefundRepository;
@@ -52,7 +53,7 @@ public class RefundService implements IRefundService {
     public RefundAndReturnResponse requestRefund(RaiseRefundRequest refundRequestDto) {
         log.info("Requesting for the refund on returning the products: "+refundRequestDto.getProductIds());
         Order order = orderService.getOrder(refundRequestDto.getOrderId());
-        if(!order.getOrderStatus().equals("DELIVERED")){
+        if(!(order.getOrderStatus() == Order.OrderStatus.DELIVERED)){
             throw new RuntimeException("The order must be delivered before the refund..");
         }
         List<OrderItem> orderItems = order.getOrderItems();
@@ -61,12 +62,11 @@ public class RefundService implements IRefundService {
         for(OrderItem item : orderItems){
             if(refundRequestDto.getProductIds().contains(item.getProductId())){
                 checkProductReturnable(item.getProductId(),order.getShippingId());
-                refundAmount += item.getPrice();
+                refundAmount += item.getPrice() + item.getTax();
 
             }
         }
         totalAmount = totalAmount-refundAmount;
-        System.out.println("payment: "+order.getPaymentId());
         Refund refund = new Refund();
         refund.setRefundId(String.valueOf(sequenceGeneratorService.getNextSequence("refundId")));
         refund.setUserId(order.getBuyerId());
@@ -75,58 +75,58 @@ public class RefundService implements IRefundService {
         refund.setReason(refundRequestDto.getReason());
         double amount = Math.round(refundAmount * 100.0) / 100.0;
         refund.setRefundAmount(amount);
-        refund.setStatus("PENDING");
+        refund.setStatus(Refund.RefundStatus.PENDING);
         refund.setRequestedAt(new Date());
         ShippingDetails shippingDetails = returnService.updateShippingStatusForRefundAndReturn(order.getId());
         // this will update the status in shipping details
         returnService.updateOrderItemsForReturn(orderItems,refundRequestDto); //update the status of product to request to return
         DeliveryPerson deliveryPerson = returnService.assignReturnProductToDeliveryPerson(shippingDetails,refundRequestDto.getReason());
-        // this will asign the delivery person to pick the items
-        Refund refund1 = refundRepository.save(refund);
-//        order.setFinalAmount(Math.round(totalAmount * 100.0) / 100.0);
+        // this will assign the delivery person to pick the items
+        Refund refund1 = saveRefund(refund);
         order.setRefundId(refund1.getRefundId());
-        order.setReturned(true);
-        orderService.saveOrder(order); // updates the total amount and the return id
-        approveRefund(refund1.getRefundId(),"admin");
-        return returnService. getRefundAndReturnResponce(deliveryPerson,refund1); // this will return the refund and return details of the product
+        orderService.saveOrder(order);
+
+        return returnService. getRefundAndReturnResponce(deliveryPerson,approveRefund(refund1.getRefundId(),"admin")); // this will return the refund and return details of the product
     }
 
     //2. Approve the refund request (admin) if the reason is genuine
     public Refund approveRefund(String refundId, String adminId) {
         log.info("Approve the refund for: "+refundId);
         Refund refund = getRefundById(refundId);
-        if (!refund.getStatus().equals("PENDING")) {
+        if (!(refund.getStatus()==Refund.RefundStatus.PENDING)) {
             throw new IllegalStateException("Only PENDING refunds can be approved");
         }
-        refund.setStatus("APPROVED");
+        System.out.println("refund status: "+refund.getStatus());
+        refund.setStatus(Refund.RefundStatus.APPROVED);
+        System.out.println("refund status: "+refund.getStatus());
         refund.setProcessedAt(new Date());
 
-        return refundRepository.save(refund);
+        return saveRefund(refund);
     }
 
-//  3. Reject refund request (admin)
+//  3. Reject refund if any damages are there (admin)
     public Refund rejectRefund(String refundId, String reason) {
         log.info("Rejecting the return and refund");
         Refund refund = getRefundById(refundId);
-        if (!refund.getStatus().equals("APPROVED")) {
+        if (!(refund.getStatus()==Refund.RefundStatus.APPROVED)) {
             throw new IllegalStateException("Only APPROVED refunds can be rejected");
         }
-        refund.setStatus("REJECTED");
+        refund.setStatus(Refund.RefundStatus.REJECTED);
         refund.setProcessedAt(new Date());
         refund.setReason(refund.getReason() + " | Rejected: " + reason);
         //  sends the mail after the refund request is rejected.
         emailService.sendRefundRejectedEmail("iamanil3121@gmail.com",refund.getUserId(),refund.getOrderId());
-        return refundRepository.save(refund);
+        return saveRefund(refund);
     }
 
     //4. Complete the refund
     public Refund completeRefund(ReturnUpdateRequest returnUpdate) {
         log.info("Making Refund to completed when the product is picked.");
         Refund refund = getRefundsByOrderId(returnUpdate.getOrderId());
-        if (!refund.getStatus().equals("APPROVED")) {
+        if (!(refund.getStatus()==Refund.RefundStatus.APPROVED)) {
             throw new IllegalStateException("Only APPROVED refunds can be completed");
         }
-        refund.setStatus("COMPLETED");
+        refund.setStatus(Refund.RefundStatus.COMPLETED);
         refund.setProcessedAt(new Date());
         Order order = orderService.getOrder(refund.getOrderId());
         double amount = order.getFinalAmount();
@@ -134,12 +134,13 @@ public class RefundService implements IRefundService {
         amount  = Math.round(amount * 100.0) / 100.0;
         order.setFinalAmount(amount);
         order.setRefundAmount(refundAmount);
+        order.setReturned(true);
         Order order1 = orderService.saveOrder(order); // updating the final amount after the refund is completed.
         emailService.sendReturnCompletedEmail("iamanil3121@gmail.com",order1.getBuyerId(),order1);
         // this will remove the return product details from the delivery persons to return fields.
         deliveryService.removeReturnItemFromDeliveryPerson(returnUpdate.getDeliveryPersonId(),returnUpdate.getOrderId());
 //        returnService.updateStockLogAfterOrderCancellation(order1.getId()); // we have to update the stock log  after the order cancellation.
-        return refundRepository.save(refund);
+        return saveRefund(refund);
     }
 
      //5. Get refund by ID
@@ -181,9 +182,9 @@ public class RefundService implements IRefundService {
         boolean isReturnAllowed = isReturnAvailable(deliveredDate, returnBefore);
 
         if (isReturnAllowed) {
-            System.out.println("Product is eligible for return.");
+            log.info("Product is eligible for return.");
         } else {
-            System.out.println("Return period has expired.");
+            log.info("Return period as expired.");
             throw new RuntimeException(" Return period has expired. ");
         }
 
@@ -210,14 +211,11 @@ public class RefundService implements IRefundService {
         log.info("getting the delivery date of order");
         Query query = new Query(Criteria.where("id").is(shippingId)
                 .and("modificationLogs.newValue").is("DELIVERED"));
-//        System.out.println("inside the getdeliverydate");
         query.fields().include("modificationLogs.$");
 
         ShippingDetails result = mongoTemplate.findOne(query, ShippingDetails.class);
-//        System.out.println("with : "+result);
         if (result != null && result.getModificationLogs() != null && !result.getModificationLogs().isEmpty()) {
-            System.out.println("inside if");
-            return result.getModificationLogs().get(0).getModifiedAt();
+            return result.getModificationLogs().getFirst().getModifiedAt();
         }
         return null;
     }
@@ -228,16 +226,16 @@ public class RefundService implements IRefundService {
     public Order cancelOrder(String orderId,String cancelReason){
         log.warn("Requesting to cancel the order: "+orderId);
         Order order = orderService.getOrder(orderId);
-        if(order.getOrderStatus().equalsIgnoreCase("SHIPPED")){
+        if(order.getOrderStatus()== Order.OrderStatus.SHIPPED){
             log.warn("Order cannot be cancelled because the cancellation time is expired.!");
             throw new OrderCancellationExpiredException("Order cannot be cancelled because the cancellation time is expired.!");
         }
-        order.setOrderStatus("CANCELLED");
+        order.setOrderStatus(Order.OrderStatus.CANCELLED);
         order.setCancelReason(cancelReason);
         order.setCancelled(true);
         order.setCancellationTime(new Date());
         Order order1 = orderService.saveOrder(order);
-        if(order.getPaymentMethod().equalsIgnoreCase("UPI")){
+        if(order.getPaymentMethod()== Payment.PaymentMethod.UPI){
             Refund refund = refundOverOrderCancellation(order1);
         }
         DeliveryPersonResponse deliveryPerson =deliveryService.getDeliveryPersonByOrderId(orderId);
@@ -259,12 +257,12 @@ public class RefundService implements IRefundService {
         Refund refund = new Refund();
         refund.setOrderId(order.getId());
         refund.setRefundAmount(order.getFinalAmount());
-        refund.setStatus("APPROVED");
+        refund.setStatus(Refund.RefundStatus.APPROVED);
         refund.setReason(order.getCancelReason());
         refund.setUserId(order.getBuyerId());
         refund.setRequestedAt(order.getCancellationTime());
         refund.setProcessedAt(new Date());
-        return refundRepository.save(refund);
+        return saveRefund(refund);
 
     }
 
